# phys-lab-2

./: CMakeLists.txt
src/: window.cpp  window.h
